--- a/style.css
+++ b/style.css
@@ -560,7 +560,7 @@ form * {
     position: absolute;
     top: 0;
     right: 0;
-    
+    color: red;
     font-size: 5rem;
     cursor: pointer;
 }
